== 0.4.2

* deprecations
  * Renamed mail_sender to mailer_sender

* enhancements
  * skip_before_filter added in Devise controllers
  * Use home_or_root_path on require_no_authentication as well
  * Added devise_controller?, useful to select or reject filters in ApplicationController
  * Allow :path_prefix to be given to devise_for (:path_prefix => "/:locale" is supported)

== 0.4.1

* bug fix
  * [#21] Ensure options can be set even if models were not loaded

== 0.4.0

* deprecations
  * Notifier is deprecated, use DeviseMailer instead. Remember to rename
    app/views/notifier to app/views/devise_mailer and I18n key from
    devise.notifier to devise.mailer
  * :authenticable calls are deprecated, use :authenticatable instead

* enhancements
  * [#16] Allow devise to be more agnostic and do not require ActiveRecord to be loaded
  * Allow Warden::Manager to be configured through Devise
  * Created a generator which creates an initializer

== 0.3.0

* bug fix
  * [#15] Allow yml messages to be configured by not using engine locales

* deprecations
  * Renamed confirm_in to confirm_within
  * [#14] Do not send confirmation messages when user changes his e-mail
  * [#13] Renamed authenticable to authenticatable and added deprecation warnings

== 0.2.3

* enhancements
  * Ensure fail! works inside strategies
  * [#12] Make unauthenticated message (when you haven't signed in) different from invalid message

* bug fix
  * Do not redirect on invalid authenticate
  * Allow model configuration to be set to nil

== 0.2.2

* bug fix
  * [#9] Fix a bug when using customized resources

== 0.2.1

* refactor
  * Clean devise_views generator to use devise existing views

* enhancements
  * [#7] Create instance variables (like @user) for each devise controller
  * Use Devise::Controller::Helpers only internally

* bug fix
  * [#6] Fix a bug with Mongrel and Ruby 1.8.6

== 0.2.0

* enhancements
  * [#4] Allow option :null => true in authenticable migration